unpackaged/main/default/objects/ReceivedDocument/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The ID of the document in its storage location.</description>
    <externalId>true</externalId>
    <label>Document ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>