unpackaged/main/default/objects/ReceivedDocument/fields/DocumentLocation__c.field-meta.xml
<CustomField>
    <fullName>DocumentLocation__c</fullName>
    <description>The storage system where the document is located.</description>
    <label>Document Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>