unpackaged/main/default/objects/ReceivedDocument/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The household this document relates to.</description>
    <label>Household</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be a household</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Received Documents</relationshipLabel>
    <relationshipName>ReceivedDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>