unpackaged/main/default/objects/ReceivedDocument/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>PlatformId__c</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>